<resources>
    <string name="app_name">云南政务</string>
    <string name="app_name_en">ZWFW</string>
    <string name="title_name">云南掌上政务服务</string>
    <string name="splash_tip">移动政务一掌揽尽</string>

    <!--login-->
    <string name="user_name">用户名</string>
    <string name="user_pwd">密码</string>
    <string name="user_worker_number">工号</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="login">登录</string>
    <string name="logging">正在登录...</string>
    <string name="log_off">退出</string>

    <!--MainActivity-->
    <string name="approve_center">我的办件</string>
    <string name="person_center">个人中心</string>


    <!--首页-->
    <string name="tab_home">首页</string>
    <string name="my_todo">我的待办</string>
    <string name="msg_center">消息中心</string>
    <string name="alarm_task">预警件</string>
    <string name="time_out_task">超时件</string>
    <string name="task_query">办件查询</string>
    <string name="work_chat">聊聊工作</string>

    <!--msg-->
    <string name="msg_home"></string>

    <string name="task_detail">办件详情</string>

    <!--workchat-->
    <string name="perform_chat">发起提问</string>

    <!--办件查询-->
    <string name="query_result">查询结果</string>

    <!--meInfo-->
    <string name="name">姓名</string>
    <string name="user_code">工号</string>
    <string name="mobilePhone">手机</string>
    <string name="email">电子邮箱</string>
    <string name="address">地址</string>
    <string name="remark">备注</string>
    <string name="edit_meInfo">编辑个人信息</string>
    <string name="change_pwd">修改密码</string>

    <string name="old_pwd">旧密码</string>
    <string name="new_pwd">新密码</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="complete">完成</string>

    <string name="about">关于我们</string>
    <string name="company_name">单位名称</string>
    <string name="phone">联系电话</string>
    <string name="web_url">完成</string>

    <!--appUpdate-->
    <string name="update_tip">升级提示</string>
    <string name="detect_new">发现新版本%1$s，请及时更新</string>
    <string name="update_now">立即更新</string>
    <string name="update_next">下次再说</string>
    <string name="start_download">开始下载</string>
    <string name="finish_download">下载完成</string>
    <string name="download_failed">下载失败</string>
    <string name="downloading">正在下载</string>

    <string name="authorization">Copyright© 2017 - 2020 ZTESoft.All Rights Reserved</string>

</resources>
