<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_me_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".moudle.user.MeInfoActivity">

    <include layout="@layout/custom_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text_size" />

            <EditText
                android:id="@+id/name_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:singleLine="true"
                android:textSize="@dimen/normal_text_size" />

        </LinearLayout>

        <TextView style="@style/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/user_code"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text_size" />

            <TextView
                android:id="@+id/code_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/normal_text_size" />

        </LinearLayout>

        <TextView style="@style/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/mobilePhone"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text_size" />

            <EditText
                android:id="@+id/phone_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:singleLine="true"
                android:inputType="phone"
                android:textSize="@dimen/normal_text_size" />

        </LinearLayout>

        <TextView style="@style/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text_size" />

            <EditText
                android:id="@+id/email_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:singleLine="true"
                android:textSize="@dimen/normal_text_size" />

        </LinearLayout>

        <TextView style="@style/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text_size" />

            <EditText
                android:id="@+id/addr_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:singleLine="true"
                android:textSize="@dimen/normal_text_size" />

        </LinearLayout>

        <TextView style="@style/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/remark"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text_size" />

            <EditText
                android:id="@+id/memo_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:singleLine="true"
                android:textSize="@dimen/normal_text_size" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>
