<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/holo_blue_light"
    tools:context="com.ztesoft.zwfw.moudle.LoginActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/dl_lg"
        android:layout_marginTop="77dp"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:background="@drawable/login_bg">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/dl_user"
            android:layout_marginLeft="3dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="14sp"
            android:textColorHint="@color/hintDark"
            android:hint="@string/user_worker_number"
            android:id="@+id/edt_username"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:maxLength="50"
            android:background="@null"
            android:numeric="integer" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="18dp"
        android:background="@drawable/login_bg">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:src="@mipmap/dl_pw"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="@dimen/normal_text_size"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:id="@+id/edt_pwd"
            android:maxLength="50"
            android:password="true"
            android:background="@null"
            android:textColorHint="@color/hintDark"
            android:hint="@string/user_pwd"/>

    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:textSize="@dimen/normal_text_size"
        android:textColor="@android:color/white"
        android:onClick="onLogin"
        android:id="@+id/button" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:padding="3dp"
        android:textSize="@dimen/normal_text_size"
        android:textColor="@color/white"
        android:visibility="gone"
        android:text="@string/forget_pwd"/>

</LinearLayout>
