<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_reset_pwd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".moudle.user.ResetPwdActivity">

    <include
        layout="@layout/custom_title_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="18dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/old_pwd"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text_size"
                android:id="@+id/textView2" />

            <EditText
                android:id="@+id/old_pwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:hint="请输入"
                android:gravity="right"
                android:background="@null"
                android:password="true"
                android:textSize="@dimen/normal_text_size" />

        </LinearLayout>

        <TextView style="@style/line" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/new_pwd"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text_size" />

            <EditText
                android:id="@+id/new_pwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:gravity="right"
                android:hint="请输入"
                android:background="@null"
                android:password="true"
                android:textSize="@dimen/normal_text_size" />

        </LinearLayout>

        <TextView style="@style/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/confirm_pwd"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text_size" />

            <EditText
                android:id="@+id/confirm_pwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:gravity="right"
                android:hint="请输入"
                android:background="@null"
                android:password="true"
                android:textSize="@dimen/normal_text_size" />

        </LinearLayout>

        <TextView
            android:id="@+id/tip_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="@dimen/small_text_size"
            android:visibility="gone"
            android:text="确认密码与新密码不符"
            android:paddingRight="3dp"
            android:textColor="@color/red" />

    </LinearLayout>

    <Button
        android:id="@+id/logoff_btn"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/blue_corner_text_bg"
        android:gravity="center"
        android:onClick="changePwd"
        android:text="@string/complete"
        android:textColor="@android:color/white"
        android:textSize="@dimen/normal_text_size" />


</LinearLayout>
